legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr71279.c-4.8.2-3.out.txt
pr71279.c: In function ‘fn1’:
pr71279.c:12:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int e = 0; e < b; e = e + 1)
   ^
pr71279.c:12:3: note: use option -std=c99 or -std=gnu99 to compile your code
